# turtlebot_with_rplidar

./: CMakeLists.txt  README.md  package.xml  start_ws.sh
docker/: Dockerfile  build.sh  start_ws.sh
launch/: amcl_demo.launch  bringup_minimal.launch  bringup_with_lidar.launch  gmapping_demo.launch  rplidar_turtlebot.launch  view_navigation_key_teleop.launch  view_navigation_xbox_joy_teleop.launch  view_robot_rplidar.launch
launch/includes/: robot.launch.xml
map/: entrance-hall.map.yaml  entrance-hall.pgm
robots/: kobuki_hexagons_rplidar.urdf.xacro
rviz/: robot_rplidar.rviz
src/mapping_with_lidar/: CMakeLists.txt  package.xml
src/mapping_with_lidar/launch/: bringup_minimal.launch  bringup_with_lidar.launch  gmapping_demo.launch
src/mapping_with_lidar/launch/includes/: robot.launch.xml
urdf/: rplidar.urdf.xacro
